syntax = "proto3";
package com.fpm2025.budget;

service BudgetService {
  rpc ListBudgets(ListBudgetsRequest) returns (ListBudgetsResponse);
  rpc SetBudget(SetBudgetRequest) returns (BudgetResponse);
  rpc CheckBudget(CheckBudgetRequest) returns (CheckBudgetResponse);
}

message Budget {
  string budget_id = 1;
  string category_id = 2;
  double limit = 3;
  double spent = 4;
  string month = 5;
}

message ListBudgetsRequest {
  string user_id = 1;
}

message ListBudgetsResponse {
  repeated Budget budgets = 1;
}

message SetBudgetRequest {
  string user_id = 1;
  string category_id = 2;
  double limit = 3;
  string month = 4;
}

message BudgetResponse {
  bool success = 1;
  Budget budget = 2;
}

message CheckBudgetRequest {
  string user_id = 1;
  string category_id = 2;
  string month = 3;
}

message CheckBudgetResponse {
  bool exceeded = 1;
  double percent_used = 2;
}
